# solana-auctionhouse

./: .gitignore  Anchor.toml  README.md  package.json
app/: package.json
app/pages/: index.tsx  test-component.tsx
app/public/: idl.json
app/src/: App.js  idl.json
app/styles/: Home.module.css  globals.css
programs/auctionhouse/: Cargo.toml
programs/auctionhouse/src/: account.rs  context.rs  error.rs  lib.rs  utils.rs
tests/: auctionhouse.ts
